# pastax-global-calibration

./: .gitignore  24-09-26_loader_pytorch.ipynb  README.md  data_loader.ipynb  requirements.txt
calibration/: timings.ipynb  (+3 more)
ekman-mdn/: pyproject.toml
ekman-mdn/data/: 0-download.ipynb  1-interpolate_exec.ipynb  2-explo.ipynb  3-cleaning.ipynb
ekman-mdn/euler_criterion/: global_estimate.ipynb
ekman-mdn/euler_criterion/mlp/: train.py
ekman-mdn/euler_criterion/mlp/analysis/: 0.1-test_trajectories.ipynb  2-params_fields.ipynb  4-traj_errors.ipynb  5-traj_errors_viz.ipynb  hp_grid.ipynb
ekman-mdn/least_squares/: global_estimate.ipynb  spherical_harmonics_decomposition.ipynb
ekman-mdn/least_squares/mlp/: train.py
ekman-mdn/least_squares/mlp/analysis/: hp_grid.ipynb
ekman-mdn/src/commons/: callbacks.py  dataset.py  spherical_harmonics.py
ekman-mdn/src/ec_mlp/: data_driven_model.py  data_module.py  drift_model.py  trainer_module.py
ekman-mdn/src/ls_mlp/: data_driven_model.py  data_module.py  drift_model.py
experiments/paper1/: pyproject.toml
experiments/paper1/data/: 1-interpolate.ipynb
experiments/paper1/drift_stoch_calib_paper1.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
experiments/paper1/euler_criterion/mlp/: train.py
experiments/paper1/least_squares/: spherical_harmonics_decomposition_lbfgs.ipynb  spherical_harmonics_decomposition_lbfgs_dual.ipynb
experiments/paper1/rio_2014/: spherical_harmonics_decomposition.ipynb
experiments/paper1/src/commons/: mlp.py
experiments/paper1/src/ec_mlp/: drift_model.py  plot_callback.py
(+62 files in other folders)
